objects/fpro__FieldPro_Jobs__c.object
<CustomObject>
    <description>Keeps track of jobs submitted by user within the FieldPro App.</description>
    <fields>
        <fullName>fpro__Apex_Job_CompletedDate__c</fullName>
        <description>The time when the apex job completed.</description>
        <inlineHelpText>The time when the apex job completed.</inlineHelpText>
        <label>Apex Job CompletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_ExtendedStatus__c</fullName>
        <description>Apex job status</description>
        <inlineHelpText>Apex job status</inlineHelpText>
        <label>Apex Job ExtendedStatus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_Id_Parent__c</fullName>
        <description>Unique apex job id of parent job (FieldProMCDService)</description>
        <inlineHelpText>Unique apex job id of parent job (FieldProMCDService)</inlineHelpText>
        <label>Apex Job Id (Parent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_Id__c</fullName>
        <description>Unique apex job id</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique apex job id</inlineHelpText>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_Status__c</fullName>
        <description>Status of the apex job</description>
        <inlineHelpText>Status of the apex job</inlineHelpText>
        <label>Apex Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_SubmittedDate__c</fullName>
        <description>The time when this apex job is submitted</description>
        <inlineHelpText>The time when this apex job is submitted</inlineHelpText>
        <label>Apex Job SubmittedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_Submitted_By__c</fullName>
        <description>Name of the user who submitted the apex job.</description>
        <inlineHelpText>Name of the user who submitted the apex job.</inlineHelpText>
        <label>Apex Job Submitted_By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Apex_Job_details__c</fullName>
        <description>Details like JobItemsProcessed, NumberOfErrors, TotalJobItems</description>
        <inlineHelpText>Details like JobItemsProcessed, NumberOfErrors, TotalJobItems</inlineHelpText>
        <label>Apex Job details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__FieldTrip_SOQL__c</fullName>
        <description>FieldTrip populate percentage criteria</description>
        <inlineHelpText>FieldTrip populate percentage criteria</inlineHelpText>
        <label>FieldTrip SOQL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fpro__Object_Name__c</fullName>
        <description>Salesforce object the service is running on.</description>
        <inlineHelpText>Salesforce object the service is running on.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Records_created_in_last_X_days__c</fullName>
        <description>Criteria to use on FieldProUsageService.cls to calculate field populate percentage (default 365 days)</description>
        <inlineHelpText>Criteria to use on FieldProUsageService.cls to calculate field populate percentage (default 365 days)</inlineHelpText>
        <label>(Deleted) Records created in last X days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpro__Service_Name__c</fullName>
        <description>Name of the service/job running.</description>
        <inlineHelpText>Name of the service/job running.</inlineHelpText>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fpro__Time_to_complete_minutes__c</fullName>
        <description>Time taken by the apex job to complete.</description>
        <formula>(fpro__Apex_Job_CompletedDate__c-fpro__Apex_Job_SubmittedDate__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by the apex job to complete.</inlineHelpText>
        <label>Time to complete (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FieldPro Jobs</label>
    <listViews>
        <fullName>Nolan_Daigle_FieldPro_Jobs</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>fpro__All</fullName>
        <columns>NAME</columns>
        <columns>fpro__Service_Name__c</columns>
        <columns>fpro__Object_Name__c</columns>
        <columns>fpro__Apex_Job_Id__c</columns>
        <columns>fpro__Apex_Job_Status__c</columns>
        <columns>fpro__Apex_Job_ExtendedStatus__c</columns>
        <columns>fpro__Apex_Job_Submitted_By__c</columns>
        <columns>fpro__Apex_Job_SubmittedDate__c</columns>
        <columns>fpro__Apex_Job_CompletedDate__c</columns>
        <columns>fpro__Time_to_complete_minutes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fpro__Exceptions</fullName>
        <columns>NAME</columns>
        <columns>fpro__Apex_Job_ExtendedStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fpro__Object_Name__c</field>
            <operation>equals</operation>
            <value>Exceptions</value>
        </filters>
        <label>Exceptions</label>
    </listViews>
    <nameField>
        <displayFormat>FieldPro Jobs-{00000}</displayFormat>
        <label>FieldPro Jobs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldPro Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>